--- a/conf/sdk.yaml
+++ b/conf/sdk.yaml
@@ -5,7 +5,7 @@ complianceCheck:
   # 是否需要进行合规性背书
   isNeedComplianceCheck: false
   # 是否需要支付合规性背书费用
-  isNeedComplianceCheckFee: true
+  isNeedComplianceCheckFee: false
   # 合规性背书费用
   complianceCheckEndorseServiceFee: 10
   # 支付合规性背书费用的收款地址
